fixed wrap issue on logo/title

--- a/css/_header.scss
+++ b/css/_header.scss
@@ -15,6 +15,7 @@ header {
 		display: flex;
 		align-items: center;
 		gap: 10px;
+		text-wrap: nowrap;
 	}
 
 	.nav {
